--- a/Ejemplos/01-Pre-procesamiento_Datos.ipynb
+++ b/Ejemplos/01-Pre-procesamiento_Datos.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -60,9 +60,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Purchased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>France</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>72000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>48000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>54000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>61000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Country   Age   Salary Purchased\n",
+       "0   France  44.0  72000.0        No\n",
+       "1    Spain  27.0  48000.0       Yes\n",
+       "2  Germany  30.0  54000.0        No\n",
+       "3    Spain  38.0  61000.0        No\n",
+       "4  Germany  40.0      NaN       Yes"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "datos.head()"
    ]
@@ -79,34 +160,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Purchased</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>France</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>72000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>48000.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>54000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Spain</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>61000.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Country   Age   Salary Purchased\n",
+       "0   France  44.0  72000.0        No\n",
+       "1    Spain  27.0  48000.0       Yes\n",
+       "2  Germany  30.0  54000.0        No\n",
+       "3    Spain  38.0  61000.0        No\n",
+       "4  Germany  40.0      NaN       Yes"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "datos.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -116,14 +300,31 @@
     "id": "hCsz2yCebe1R",
     "outputId": "1e4cc568-4e51-4b38-9d46-4aa3f15204be"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['France' 44.0 72000.0]\n",
+      " ['Spain' 27.0 48000.0]\n",
+      " ['Germany' 30.0 54000.0]\n",
+      " ['Spain' 38.0 61000.0]\n",
+      " ['Germany' 40.0 nan]\n",
+      " ['France' 35.0 58000.0]\n",
+      " ['Spain' nan 52000.0]\n",
+      " ['France' 48.0 79000.0]\n",
+      " ['Germany' 50.0 83000.0]\n",
+      " ['France' 37.0 67000.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -133,7 +334,15 @@
     "id": "eYrOQ43XcJR3",
     "outputId": "e0873b2a-3b08-4bab-ef0d-15b88858ca44"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['No' 'Yes' 'No' 'No' 'Yes' 'Yes' 'No' 'Yes' 'No' 'Yes']\n"
+     ]
+    }
+   ],
    "source": [
     "print(y)"
    ]
@@ -167,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -177,7 +386,24 @@
     "id": "3UgLdMS_bjq_",
     "outputId": "254af4e0-681e-47f5-aaa7-b9c6f43258e9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['France' 44.0 72000.0]\n",
+      " ['Spain' 27.0 48000.0]\n",
+      " ['Germany' 30.0 54000.0]\n",
+      " ['Spain' 38.0 61000.0]\n",
+      " ['Germany' 40.0 63777.77777777778]\n",
+      " ['France' 35.0 58000.0]\n",
+      " ['Spain' 38.77777777777778 52000.0]\n",
+      " ['France' 48.0 79000.0]\n",
+      " ['Germany' 50.0 83000.0]\n",
+      " ['France' 37.0 67000.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(X)"
    ]
@@ -204,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -220,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -230,7 +456,24 @@
     "id": "f7QspewyeBfx",
     "outputId": "5b35feef-7fe2-46ef-ce70-80495f94f4ed"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.0 0.0 0.0 44.0 72000.0]\n",
+      " [0.0 0.0 1.0 27.0 48000.0]\n",
+      " [0.0 1.0 0.0 30.0 54000.0]\n",
+      " [0.0 0.0 1.0 38.0 61000.0]\n",
+      " [0.0 1.0 0.0 40.0 63777.77777777778]\n",
+      " [1.0 0.0 0.0 35.0 58000.0]\n",
+      " [0.0 0.0 1.0 38.77777777777778 52000.0]\n",
+      " [1.0 0.0 0.0 48.0 79000.0]\n",
+      " [0.0 1.0 0.0 50.0 83000.0]\n",
+      " [1.0 0.0 0.0 37.0 67000.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(X)"
    ]
@@ -247,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -262,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -272,7 +515,15 @@
     "id": "FyhY8-gPpFCa",
     "outputId": "7f76ef29-5423-4c3e-cf69-45fbc366a997"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 0 1 1 0 1 0 1]\n"
+     ]
+    }
+   ],
    "source": [
     "print(y)"
    ]
@@ -289,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -303,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -313,14 +564,29 @@
     "id": "GuwQhFdKrYTM",
     "outputId": "de1e527f-c229-4daf-e7c5-ea9d2485148d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0 0.0 1.0 38.77777777777778 52000.0]\n",
+      " [0.0 1.0 0.0 40.0 63777.77777777778]\n",
+      " [1.0 0.0 0.0 44.0 72000.0]\n",
+      " [0.0 0.0 1.0 38.0 61000.0]\n",
+      " [0.0 0.0 1.0 27.0 48000.0]\n",
+      " [1.0 0.0 0.0 48.0 79000.0]\n",
+      " [0.0 1.0 0.0 50.0 83000.0]\n",
+      " [1.0 0.0 0.0 35.0 58000.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(X_entreno)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -330,14 +596,23 @@
     "id": "TUrX_Tvcrbi4",
     "outputId": "9a041a9b-2642-4828-fa2f-a431d7d77631"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0 1.0 0.0 30.0 54000.0]\n",
+      " [1.0 0.0 0.0 37.0 67000.0]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(X_prueba)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -347,14 +622,22 @@
     "id": "pSMHiIsWreQY",
     "outputId": "5afe91e0-9244-4bf5-ec1b-e3e092b85c08"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 0 0 1 1 0 1]\n"
+     ]
+    }
+   ],
    "source": [
     "print(y_entreno)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -364,7 +647,15 @@
     "id": "I_tW7H56rgtW",
     "outputId": "2a93f141-2a99-4a69-eec5-c82a3bb8d36b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1]\n"
+     ]
+    }
+   ],
    "source": [
     "print(y_prueba)"
    ]
@@ -381,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -397,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -407,14 +698,29 @@
     "id": "DWPET8ZdlMnu",
     "outputId": "dea86927-5124-4e2a-e974-2804df9a913c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0 0.0 1.0 -0.19159184384578545 -1.0781259408412425]\n",
+      " [0.0 1.0 0.0 -0.014117293757057777 -0.07013167641635372]\n",
+      " [1.0 0.0 0.0 0.566708506533324 0.633562432710455]\n",
+      " [0.0 0.0 1.0 -0.30453019390224867 -0.30786617274297867]\n",
+      " [0.0 0.0 1.0 -1.9018011447007988 -1.420463615551582]\n",
+      " [1.0 0.0 0.0 1.1475343068237058 1.232653363453549]\n",
+      " [0.0 1.0 0.0 1.4379472069688968 1.5749910381638885]\n",
+      " [1.0 0.0 0.0 -0.7401495441200351 -0.5646194287757332]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(X_entreno)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -424,7 +730,16 @@
     "id": "sTXykB_QlRjE",
     "outputId": "b68f0cfc-d07c-48cb-80d0-6800028c41f9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0 1.0 0.0 -1.4661817944830124 -0.9069571034860727]\n",
+      " [1.0 0.0 0.0 -0.44973664397484414 0.2056403393225306]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(X_prueba)"
    ]
