--- a/ht/h1/03-Vida_facil.ipynb
+++ b/ht/h1/03-Vida_facil.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1b63a35b",
    "metadata": {
     "tags": []
@@ -23016,7 +23016,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".data_mining_venv",
    "language": "python",
    "name": "python3"
   },
@@ -23030,7 +23030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
