feat: cambios requirements

--- a/Ejemplos/ejemplos_eda/02-Pre-procesamiento_Datos_Pandas.ipynb
+++ b/Ejemplos/ejemplos_eda/02-Pre-procesamiento_Datos_Pandas.ipynb
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true
    },
@@ -360,7 +360,7 @@
        "Name: Purchased, dtype: object"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -536,16 +536,16 @@
      "output_type": "stream",
      "text": [
       "   France  Germany  Spain\n",
-      "0       1        0      0\n",
-      "1       0        0      1\n",
-      "2       0        1      0\n",
-      "3       0        0      1\n",
-      "4       0        1      0\n",
-      "5       1        0      0\n",
-      "6       0        0      1\n",
-      "7       1        0      0\n",
-      "8       0        1      0\n",
-      "9       1        0      0\n"
+      "0    True    False  False\n",
+      "1   False    False   True\n",
+      "2   False     True  False\n",
+      "3   False    False   True\n",
+      "4   False     True  False\n",
+      "5    True    False  False\n",
+      "6   False    False   True\n",
+      "7    True    False  False\n",
+      "8   False     True  False\n",
+      "9    True    False  False\n"
      ]
     }
    ],
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -572,16 +572,16 @@
      "output_type": "stream",
      "text": [
       "   Country        Age        Salary  France  Germany  Spain\n",
-      "0   France  44.000000  72000.000000       1        0      0\n",
-      "1    Spain  27.000000  48000.000000       0        0      1\n",
-      "2  Germany  30.000000  54000.000000       0        1      0\n",
-      "3    Spain  38.000000  61000.000000       0        0      1\n",
-      "4  Germany  40.000000  63777.777778       0        1      0\n",
-      "5   France  35.000000  58000.000000       1        0      0\n",
-      "6    Spain  38.777778  52000.000000       0        0      1\n",
-      "7   France  48.000000  79000.000000       1        0      0\n",
-      "8  Germany  50.000000  83000.000000       0        1      0\n",
-      "9   France  37.000000  67000.000000       1        0      0\n"
+      "0   France  44.000000  72000.000000    True    False  False\n",
+      "1    Spain  27.000000  48000.000000   False    False   True\n",
+      "2  Germany  30.000000  54000.000000   False     True  False\n",
+      "3    Spain  38.000000  61000.000000   False    False   True\n",
+      "4  Germany  40.000000  63777.777778   False     True  False\n",
+      "5   France  35.000000  58000.000000    True    False  False\n",
+      "6    Spain  38.777778  52000.000000   False    False   True\n",
+      "7   France  48.000000  79000.000000    True    False  False\n",
+      "8  Germany  50.000000  83000.000000   False     True  False\n",
+      "9   France  37.000000  67000.000000    True    False  False\n"
      ]
     }
    ],
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -608,16 +608,16 @@
      "output_type": "stream",
      "text": [
       "         Age        Salary  France  Germany  Spain\n",
-      "0  44.000000  72000.000000       1        0      0\n",
-      "1  27.000000  48000.000000       0        0      1\n",
-      "2  30.000000  54000.000000       0        1      0\n",
-      "3  38.000000  61000.000000       0        0      1\n",
-      "4  40.000000  63777.777778       0        1      0\n",
-      "5  35.000000  58000.000000       1        0      0\n",
-      "6  38.777778  52000.000000       0        0      1\n",
-      "7  48.000000  79000.000000       1        0      0\n",
-      "8  50.000000  83000.000000       0        1      0\n",
-      "9  37.000000  67000.000000       1        0      0\n"
+      "0  44.000000  72000.000000    True    False  False\n",
+      "1  27.000000  48000.000000   False    False   True\n",
+      "2  30.000000  54000.000000   False     True  False\n",
+      "3  38.000000  61000.000000   False    False   True\n",
+      "4  40.000000  63777.777778   False     True  False\n",
+      "5  35.000000  58000.000000    True    False  False\n",
+      "6  38.777778  52000.000000   False    False   True\n",
+      "7  48.000000  79000.000000    True    False  False\n",
+      "8  50.000000  83000.000000   False     True  False\n",
+      "9  37.000000  67000.000000    True    False  False\n"
      ]
     }
    ],
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -661,16 +661,16 @@
      "output_type": "stream",
      "text": [
       "         Age        Salary  Country_France  Country_Germany  Country_Spain\n",
-      "0  44.000000  72000.000000               1                0              0\n",
-      "1  27.000000  48000.000000               0                0              1\n",
-      "2  30.000000  54000.000000               0                1              0\n",
-      "3  38.000000  61000.000000               0                0              1\n",
-      "4  40.000000  63777.777778               0                1              0\n",
-      "5  35.000000  58000.000000               1                0              0\n",
-      "6  38.777778  52000.000000               0                0              1\n",
-      "7  48.000000  79000.000000               1                0              0\n",
-      "8  50.000000  83000.000000               0                1              0\n",
-      "9  37.000000  67000.000000               1                0              0\n"
+      "0  44.000000  72000.000000            True            False          False\n",
+      "1  27.000000  48000.000000           False            False           True\n",
+      "2  30.000000  54000.000000           False             True          False\n",
+      "3  38.000000  61000.000000           False            False           True\n",
+      "4  40.000000  63777.777778           False             True          False\n",
+      "5  35.000000  58000.000000            True            False          False\n",
+      "6  38.777778  52000.000000           False            False           True\n",
+      "7  48.000000  79000.000000            True            False          False\n",
+      "8  50.000000  83000.000000           False             True          False\n",
+      "9  37.000000  67000.000000            True            False          False\n"
      ]
     }
    ],
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 22,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -718,17 +718,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   No  Yes\n",
-      "0   1    0\n",
-      "1   0    1\n",
-      "2   1    0\n",
-      "3   1    0\n",
-      "4   0    1\n",
-      "5   0    1\n",
-      "6   1    0\n",
-      "7   0    1\n",
-      "8   1    0\n",
-      "9   0    1\n"
+      "      No    Yes\n",
+      "0   True  False\n",
+      "1  False   True\n",
+      "2   True  False\n",
+      "3   True  False\n",
+      "4  False   True\n",
+      "5  False   True\n",
+      "6   True  False\n",
+      "7  False   True\n",
+      "8   True  False\n",
+      "9  False   True\n"
      ]
     }
    ],
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -778,14 +778,14 @@
      "output_type": "stream",
      "text": [
       "         Age        Salary  Country_France  Country_Germany  Country_Spain\n",
-      "6  38.777778  52000.000000               0                0              1\n",
-      "4  40.000000  63777.777778               0                1              0\n",
-      "0  44.000000  72000.000000               1                0              0\n",
-      "3  38.000000  61000.000000               0                0              1\n",
-      "1  27.000000  48000.000000               0                0              1\n",
-      "7  48.000000  79000.000000               1                0              0\n",
-      "8  50.000000  83000.000000               0                1              0\n",
-      "5  35.000000  58000.000000               1                0              0\n"
+      "6  38.777778  52000.000000           False            False           True\n",
+      "4  40.000000  63777.777778           False             True          False\n",
+      "0  44.000000  72000.000000            True            False          False\n",
+      "3  38.000000  61000.000000           False            False           True\n",
+      "1  27.000000  48000.000000           False            False           True\n",
+      "7  48.000000  79000.000000            True            False          False\n",
+      "8  50.000000  83000.000000           False             True          False\n",
+      "5  35.000000  58000.000000            True            False          False\n"
      ]
     }
    ],
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -811,8 +811,8 @@
      "output_type": "stream",
      "text": [
       "    Age   Salary  Country_France  Country_Germany  Country_Spain\n",
-      "2  30.0  54000.0               0                1              0\n",
-      "9  37.0  67000.0               1                0              0\n"
+      "2  30.0  54000.0           False             True          False\n",
+      "9  37.0  67000.0            True            False          False\n"
      ]
     }
    ],
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -837,15 +837,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   No  Yes\n",
-      "6   1    0\n",
-      "4   0    1\n",
-      "0   1    0\n",
-      "3   1    0\n",
-      "1   0    1\n",
-      "7   0    1\n",
-      "8   1    0\n",
-      "5   0    1\n"
+      "      No    Yes\n",
+      "6   True  False\n",
+      "4  False   True\n",
+      "0   True  False\n",
+      "3   True  False\n",
+      "1  False   True\n",
+      "7  False   True\n",
+      "8   True  False\n",
+      "5  False   True\n"
      ]
     }
    ],
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -870,9 +870,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   No  Yes\n",
-      "2   1    0\n",
-      "9   0    1\n"
+      "      No    Yes\n",
+      "2   True  False\n",
+      "9  False   True\n"
      ]
     }
    ],
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -925,14 +925,14 @@
      "output_type": "stream",
      "text": [
       "        Age    Salary  Country_France  Country_Germany  Country_Spain\n",
-      "6  0.512077  0.114286               0                0              1\n",
-      "4  0.565217  0.450794               0                1              0\n",
-      "0  0.739130  0.685714               1                0              0\n",
-      "3  0.478261  0.371429               0                0              1\n",
-      "1  0.000000  0.000000               0                0              1\n",
-      "7  0.913043  0.885714               1                0              0\n",
-      "8  1.000000  1.000000               0                1              0\n",
-      "5  0.347826  0.285714               1                0              0\n"
+      "6  0.512077  0.114286           False            False           True\n",
+      "4  0.565217  0.450794           False             True          False\n",
+      "0  0.739130  0.685714            True            False          False\n",
+      "3  0.478261  0.371429           False            False           True\n",
+      "1  0.000000  0.000000           False            False           True\n",
+      "7  0.913043  0.885714            True            False          False\n",
+      "8  1.000000  1.000000           False             True          False\n",
+      "5  0.347826  0.285714            True            False          False\n"
      ]
     }
    ],
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -958,8 +958,8 @@
      "output_type": "stream",
      "text": [
       "    Age   Salary  Country_France  Country_Germany  Country_Spain\n",
-      "2  30.0  54000.0               0                1              0\n",
-      "9  37.0  67000.0               1                0              0\n"
+      "2  30.0  54000.0           False             True          False\n",
+      "9  37.0  67000.0            True            False          False\n"
      ]
     }
    ],
