--- a/ht/h2/lab02.ipynb
+++ b/ht/h2/lab02.ipynb
@@ -6,14 +6,12 @@
    "source": [
     "# Clustering - Conjunto de Datos Iris\n",
     "\n",
-    "Aplicando técnicas de clustering se buscó segmentar las especies de la flor Iris utilizando el conjunto de datos clásico de Machine Learning. Se explorarán los datos visualmente y se implementará el algoritmo K-Means para agrupar las muestras según la forma del sépalo y el pétalo. Además, se empleará el método del \"codo\" y la librería kneed para determinar el número óptimo de clusters. Finalmente, se compararán los resultados obtenidos con los datos reales para evaluar la efectividad del modelo.\n",
-    "\n",
-    "## Sección 1"
+    "Aplicando técnicas de clustering se buscó segmentar las especies de la flor Iris utilizando el conjunto de datos clásico de Machine Learning. Se explorarán los datos visualmente y se implementará el algoritmo K-Means para agrupar las muestras según la forma del sépalo y el pétalo. Además, se empleará el método del \"codo\" y la librería kneed para determinar el número óptimo de clusters. Finalmente, se compararán los resultados obtenidos con los datos reales para evaluar la efectividad del modelo."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,13 +19,105 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import scipy.cluster.hierarchy as sch\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "def borrarNulosDulicados(df, cant_object, cant_obs, flag_object):\n",
+    "  prop = cant_object/cant_obs\n",
+    "  type_data = \"nulos\" if flag_object else \"duplicados\"\n",
+    "  \n",
+    "  if prop > 0.05: #Regla del 5% xd\n",
+    "    print(f\"El porcentaje de datos {type_data} es del {prop*100}%. Se debe hacer otro método de eliminación.\")\n",
+    "    return df\n",
+    "  elif  0 < prop < 0.05:\n",
+    "    print(f\"El porcentaje de datos {type_data} es del {prop*100}%. Se pueden eliminar los datos.\")\n",
+    "    \n",
+    "    if flag_object:\n",
+    "      df.dropna()\n",
+    "    else:\n",
+    "      df.drop_duplicates()\n",
+    "    return df\n",
+    "\n",
+    "  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Columnas:\n",
+      "\t• sepal_length\n",
+      "\t• sepal_width\n",
+      "\t• petal_length\n",
+      "\t• petal_width\n",
+      "- Vista Previa DF:\n",
+      "    sepal_length  sepal_width  petal_length  petal_width\n",
+      "0           5.1          3.5           1.4          0.2\n",
+      "1           4.9          3.0           1.4          0.2\n",
+      "2           4.7          3.2           1.3          0.2\n",
+      "3           4.6          3.1           1.5          0.2\n",
+      "4           5.0          3.6           1.4          0.2\n",
+      "5           5.4          3.9           1.7          0.4\n",
+      "6           4.6          3.4           1.4          0.3\n",
+      "7           5.0          3.4           1.5          0.2\n",
+      "8           4.4          2.9           1.4          0.2\n",
+      "9           4.9          3.1           1.5          0.1\n",
+      "- Tamaño de DF: \n",
+      "\t• 150 filas \n",
+      "\t• 4 columnas\n",
+      "- Existen: \n",
+      "\t• 0 valores nulos \n",
+      "\t• 3 valores duplicados\n",
+      "El porcentaje de datos duplicados es del 2.0%. Se pueden eliminar los datos.\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'drop_duplicates'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[49], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m- Existen: \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m• \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcant_nulos\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m valores nulos \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m• \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcant_dupli\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m valores duplicados\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     17\u001b[0m iris_df_s1 \u001b[38;5;241m=\u001b[39m borrarNulosDulicados(df\u001b[38;5;241m=\u001b[39miris_df_s1, cant_object\u001b[38;5;241m=\u001b[39mcant_nulos, cant_obs\u001b[38;5;241m=\u001b[39mcant_obs, flag_object\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m---> 18\u001b[0m iris_df_s1 \u001b[38;5;241m=\u001b[39m \u001b[43mborrarNulosDulicados\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43miris_df_s1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcant_object\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcant_dupli\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcant_obs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcant_obs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mflag_object\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# iris_df_s2 = iris_df_s1.copy()\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# iris_df_s3 = iris_df_s1.copy()\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[40], line 20\u001b[0m, in \u001b[0;36mborrarNulosDulicados\u001b[1;34m(df, cant_object, cant_obs, flag_object)\u001b[0m\n\u001b[0;32m     18\u001b[0m   df\u001b[38;5;241m.\u001b[39mdropna()\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 20\u001b[0m   \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdrop_duplicates\u001b[49m()\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m df\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'drop_duplicates'"
+     ]
+    }
+   ],
+   "source": [
+    "iris_df_s1 = pd.read_csv(\"iris.csv\")\n",
+    "\n",
+    "columns = iris_df_s1.columns\n",
+    "cant_obs = iris_df_s1.shape[0]\n",
+    "cant_var = iris_df_s1.shape[1]\n",
+    "cant_nulos = iris_df_s1.isnull().sum().sum()\n",
+    "cant_dupli = iris_df_s1.duplicated().sum()\n",
+    "\n",
+    "print(\"- Vista Previa DF:\\n\",iris_df_s1.head(10))\n",
+    "print(f\"- Tamaño de DF: \\n\\t• {cant_obs} filas \\n\\t• {cant_var} columnas\")\n",
+    "print(f\"- Existen: \\n\\t• {cant_nulos} valores nulos \\n\\t• {cant_dupli} valores duplicados\")\n",
+    "print(\"- Columnas:\")\n",
+    "for col in columns:\n",
+    "  print(f\"\\t• {col}\")\n",
+    "\n",
+    "\n",
+    "# iris_df_s1 = borrarNulosDulicados(df=iris_df_s1, cant_object=cant_nulos, cant_obs=cant_obs, flag_object=True)\n",
+    "# iris_df_s1 = borrarNulosDulicados(df=iris_df_s1, cant_object=cant_dupli, cant_obs=cant_obs, flag_object=False)\n",
+    "\n",
+    "# iris_df_s2 = iris_df_s1.copy()\n",
+    "# iris_df_s3 = iris_df_s1.copy()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Sección 1\n",
+    "\n",
     "1. **Visualicen los datos para ver si pueden detectar algunos grupos. Ayuda: utilicen la forma del sépalo:**"
    ]
   },
@@ -48,12 +138,10 @@
     }
    ],
    "source": [
-    "iris_df = pd.read_csv(\"iris.csv\")\n",
-    "\n",
     "# Gráfico de dispersión de la forma del sépalo\n",
     "\n",
     "plt.figure(figsize=(8,6))\n",
-    "plt.scatter(iris_df[\"sepal_length\"], iris_df[\"sepal_width\"], alpha=0.6)\n",
+    "plt.scatter(iris_df_s1[\"sepal_length\"], iris_df_s1[\"sepal_width\"], alpha=0.6)\n",
     "\n",
     "# Etiquetas\n",
     "plt.xlabel(\"Longitud del Sépalo\")\n",
@@ -99,7 +187,7 @@
     }
    ],
    "source": [
-    "linked = sch.linkage(iris_df[[\"sepal_length\", \"sepal_width\"]], method = \"ward\")\n",
+    "linked = sch.linkage(iris_df_s1[[\"sepal_length\", \"sepal_width\"]], method = \"ward\")\n",
     "plt.figure(figsize=(10,5))\n",
     "sch.dendrogram(linked, no_labels = True, color_threshold = 4)\n",
     "\n",
@@ -208,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -327,13 +415,12 @@
        "9           4.9          3.1           1.5          0.1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "iris_df_s2 = pd.read_csv(\"iris.csv\")\n",
     "iris_df_s2.head(n=10)"
    ]
   },
