feat: cambio en funcion principal

--- a/ht/h2/lab02.ipynb
+++ b/ht/h2/lab02.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,39 +21,38 @@
     "import scipy.cluster.hierarchy as sch\n",
     "%matplotlib inline\n",
     "\n",
-    "def borrarNulosDulicados(df, cant_object, cant_obs, flag_object):\n",
-    "  prop = cant_object/cant_obs\n",
-    "  type_data = \"nulos\" if flag_object else \"duplicados\"\n",
-    "  \n",
-    "  if prop > 0.05: #Regla del 5% xd\n",
-    "    print(f\"El porcentaje de datos {type_data} es del {prop*100}%. Se debe hacer otro método de eliminación.\")\n",
-    "    return df\n",
-    "  elif  0 < prop < 0.05:\n",
-    "    print(f\"El porcentaje de datos {type_data} es del {prop*100}%. Se pueden eliminar los datos.\")\n",
+    "def borrarNulosDuplicados(df, cant_object, cant_obs, flag_object):\n",
+    "    if cant_obs == 0:  \n",
+    "        print(\"No hay observaciones en el DataFrame.\")\n",
+    "        return df\n",
     "    \n",
-    "    if flag_object:\n",
-    "      df.dropna()\n",
-    "    else:\n",
-    "      df.drop_duplicates()\n",
-    "    return df\n",
+    "    prop = cant_object / cant_obs\n",
+    "    type_data = \"nulos\" if flag_object else \"duplicados\"\n",
     "\n",
-    "  \n"
+    "    if prop == 0:\n",
+    "        print(f\"El porcentaje de datos {type_data} es del 0%. No es necesario eliminarlos.\")\n",
+    "    elif prop > 0.05:  # Regla del 5%\n",
+    "        print(f\"El porcentaje de datos {type_data} es del {prop*100:.2f}%. Se debe hacer otro método de eliminación.\")\n",
+    "    else:\n",
+    "        print(f\"El porcentaje de datos {type_data} es del {prop*100:.2f}%. Se pueden eliminar los datos.\")\n",
+    "\n",
+    "        if flag_object:\n",
+    "            df = df.dropna()  # Reasignar el DataFrame corregido\n",
+    "        else:\n",
+    "            df = df.drop_duplicates()\n",
+    "\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Columnas:\n",
-      "\t• sepal_length\n",
-      "\t• sepal_width\n",
-      "\t• petal_length\n",
-      "\t• petal_width\n",
       "- Vista Previa DF:\n",
       "    sepal_length  sepal_width  petal_length  petal_width\n",
       "0           5.1          3.5           1.4          0.2\n",
@@ -72,19 +71,13 @@
       "- Existen: \n",
       "\t• 0 valores nulos \n",
       "\t• 3 valores duplicados\n",
-      "El porcentaje de datos duplicados es del 2.0%. Se pueden eliminar los datos.\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'drop_duplicates'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[49], line 18\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m- Existen: \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m• \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcant_nulos\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m valores nulos \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[38;5;124m• \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcant_dupli\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m valores duplicados\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     17\u001b[0m iris_df_s1 \u001b[38;5;241m=\u001b[39m borrarNulosDulicados(df\u001b[38;5;241m=\u001b[39miris_df_s1, cant_object\u001b[38;5;241m=\u001b[39mcant_nulos, cant_obs\u001b[38;5;241m=\u001b[39mcant_obs, flag_object\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m---> 18\u001b[0m iris_df_s1 \u001b[38;5;241m=\u001b[39m \u001b[43mborrarNulosDulicados\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43miris_df_s1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcant_object\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcant_dupli\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcant_obs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcant_obs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mflag_object\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# iris_df_s2 = iris_df_s1.copy()\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# iris_df_s3 = iris_df_s1.copy()\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[40], line 20\u001b[0m, in \u001b[0;36mborrarNulosDulicados\u001b[1;34m(df, cant_object, cant_obs, flag_object)\u001b[0m\n\u001b[0;32m     18\u001b[0m   df\u001b[38;5;241m.\u001b[39mdropna()\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m---> 20\u001b[0m   \u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdrop_duplicates\u001b[49m()\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m df\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'drop_duplicates'"
+      "- Columnas:\n",
+      "\t• sepal_length\n",
+      "\t• sepal_width\n",
+      "\t• petal_length\n",
+      "\t• petal_width\n",
+      "El porcentaje de datos nulos es del 0%. No es necesario eliminarlos.\n",
+      "El porcentaje de datos duplicados es del 2.00%. Se pueden eliminar los datos.\n"
      ]
     }
    ],
@@ -105,8 +98,8 @@
     "  print(f\"\\t• {col}\")\n",
     "\n",
     "\n",
-    "# iris_df_s1 = borrarNulosDulicados(df=iris_df_s1, cant_object=cant_nulos, cant_obs=cant_obs, flag_object=True)\n",
-    "# iris_df_s1 = borrarNulosDulicados(df=iris_df_s1, cant_object=cant_dupli, cant_obs=cant_obs, flag_object=False)\n",
+    "iris_df_s1 = borrarNulosDuplicados(df=iris_df_s1, cant_object=cant_nulos, cant_obs=cant_obs, flag_object=True)\n",
+    "iris_df_s1 = borrarNulosDuplicados(df=iris_df_s1, cant_object=cant_dupli, cant_obs=cant_obs, flag_object=False)\n",
     "\n",
     "# iris_df_s2 = iris_df_s1.copy()\n",
     "# iris_df_s3 = iris_df_s1.copy()"
