feat: creacion nuevos df

--- a/ht/h2/lab02.ipynb
+++ b/ht/h2/lab02.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -101,8 +101,8 @@
     "iris_df_s1 = borrarNulosDuplicados(df=iris_df_s1, cant_object=cant_nulos, cant_obs=cant_obs, flag_object=True)\n",
     "iris_df_s1 = borrarNulosDuplicados(df=iris_df_s1, cant_object=cant_dupli, cant_obs=cant_obs, flag_object=False)\n",
     "\n",
-    "# iris_df_s2 = iris_df_s1.copy()\n",
-    "# iris_df_s3 = iris_df_s1.copy()"
+    "iris_df_s2 = iris_df_s1.copy()\n",
+    "iris_df_s3 = iris_df_s1.copy()"
    ]
   },
   {
