feat: añadiendo csv

--- a/Ejemplos/ejemplos_arboles/Ejemplo de Árbol de regresion con carros.ipynb
+++ b/Ejemplos/ejemplos_arboles/Ejemplo de Árbol de regresion con carros.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'statsmodels'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mstatsmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mapi\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msm\u001b[39;00m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mstatsmodels\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstats\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdiagnostic\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msmd\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'statsmodels'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -52,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "carros = pd.read_csv(\"../Datos/cars.csv\")"
+    "carros = pd.read_csv(\"./cars.csv\")"
    ]
   },
   {
@@ -115,17 +103,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['symboling', 'normalized-losses', 'make', 'fuel-type', 'aspiration',\n",
+      "       'num-of-doors', 'body-style', 'drive-wheels', 'engine-location',\n",
+      "       'wheel-base', 'length', 'width', 'height', 'curb-weight', 'engine-type',\n",
+      "       'num-of-cylinders', 'engine-size', 'fuel-system', 'bore', 'stroke',\n",
+      "       'compression-ratio', 'horsepower', 'peak-rpm', 'city-mpg',\n",
+      "       'highway-mpg', 'price'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(carros.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = carros.pop(\"city_mpg\")\n",
+    "y = carros.pop(\"city-mpg\")\n",
     "X = carros"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -167,25 +178,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['make',\n",
-       " 'fuel_type',\n",
+       "['normalized-losses',\n",
+       " 'make',\n",
+       " 'fuel-type',\n",
        " 'aspiration',\n",
-       " 'num_of_doors',\n",
-       " 'body_style',\n",
-       " 'drive_wheels',\n",
-       " 'engine_location',\n",
-       " 'engine_type',\n",
-       " 'num_of_cylinders',\n",
-       " 'fuel_system']"
+       " 'num-of-doors',\n",
+       " 'body-style',\n",
+       " 'drive-wheels',\n",
+       " 'engine-location',\n",
+       " 'engine-type',\n",
+       " 'num-of-cylinders',\n",
+       " 'fuel-system',\n",
+       " 'bore',\n",
+       " 'stroke',\n",
+       " 'horsepower',\n",
+       " 'peak-rpm',\n",
+       " 'price']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,16 +244,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'regressor__max_depth': 8}"
+       "{'regressor__max_depth': np.int64(9)}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,28 +280,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([33.90909091, 27.        , 18.28571429, 24.66666667, 30.11764706,\n",
-       "       38.        , 33.90909091, 21.        , 26.        , 30.11764706,\n",
-       "       24.        , 30.11764706, 24.66666667, 30.11764706, 20.25      ,\n",
-       "       25.        , 30.11764706, 37.        , 17.        , 30.11764706,\n",
-       "       24.        , 18.28571429, 33.90909091, 22.8       , 37.        ,\n",
-       "       30.11764706, 24.        , 30.11764706, 18.28571429, 22.8       ,\n",
-       "       33.90909091, 19.        , 18.28571429, 33.90909091, 30.11764706,\n",
-       "       22.        , 21.        , 22.8       , 33.90909091, 37.        ,\n",
-       "       25.        , 33.90909091, 16.        , 22.8       , 25.        ,\n",
-       "       27.66666667, 31.        , 33.90909091, 18.83333333, 31.        ,\n",
-       "       18.28571429, 26.        , 24.        , 33.90909091, 25.        ,\n",
-       "       30.11764706, 19.        , 22.8       , 26.        , 30.11764706,\n",
-       "       25.        , 30.11764706])"
+       "array([29.40909091, 23.69230769, 16.        , 22.        , 23.69230769,\n",
+       "       19.        , 23.69230769, 23.69230769, 15.        , 27.        ,\n",
+       "       23.69230769, 29.40909091, 33.        , 19.        , 29.40909091,\n",
+       "       29.40909091, 23.69230769, 29.40909091, 24.        , 19.        ,\n",
+       "       24.        , 29.40909091, 28.        , 24.        , 29.40909091,\n",
+       "       29.40909091, 23.69230769, 23.69230769, 22.        , 16.        ,\n",
+       "       29.40909091, 21.        , 37.33333333, 15.        , 19.        ,\n",
+       "       17.        , 19.        , 23.69230769, 29.40909091, 19.        ,\n",
+       "       16.        , 29.40909091, 29.40909091, 17.        , 29.40909091,\n",
+       "       19.        , 17.        , 23.69230769, 23.69230769, 23.69230769,\n",
+       "       17.        , 17.        , 23.69230769, 28.        , 23.69230769,\n",
+       "       24.        , 29.40909091, 29.40909091, 21.        , 29.40909091,\n",
+       "       29.40909091, 17.        ])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
